--- a/project/news/templates/post/post_list.html
+++ b/project/news/templates/post/post_list.html
@@ -19,6 +19,7 @@
         </div>
         <!-- end: Page title -->
         {% endblock %}
+        {% load censor_filters %}
         <div id="blog" class="grid-layout post-3-columns m-b-30" data-item="post-item">
             {% if posts %}
                 {% for post in posts %}
@@ -42,7 +43,7 @@
                                 <span class="post-meta-comments"><a href=""><i class="fa fa-comments-o"></i>33 Comments</a></span>
                                 <h2><a href="/posts/{{post.id}}">{{post.title}}
                                     </a></h2>
-                                <p>{{post.preview}}</p>
+                                <p>{{post.content|truncatewords:20|censor}}</p>
                                 <a href="/posts/{{post.id}}" class="item-link">Прочитать <i class="icon-chevron-right"></i></a>
                             </div>
                         </div>
