--- a/project/news/templates/post/post_list.html
+++ b/project/news/templates/post/post_list.html
@@ -54,17 +54,11 @@
                 <p>Постов не найдено! </p>
             {% endif %}
         </div>
+        
     {% block pagination %}
         <!-- Pagination -->
-        <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#"><i class="fa fa-angle-left"></i></a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item active"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
-            <li class="page-item"><a class="page-link" href="#">5</a></li>
-            <li class="page-item"><a class="page-link" href="#"><i class="fa fa-angle-right"></i></a></li>
-        </ul>
+        <!-- Включение header -->
+        {% include 'pagination.html' %}
         <!-- end: Pagination -->
     {% endblock %}
     </div>
